--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "inquirer": "^8.1.2"
+    "inquirer": "^8.1.2",
+    "uuid": "^8.3.2"
   }
 }
